# afj

./: .gitignore  README.md  bump_version.py  pyproject.toml
src/afj/: cli.py
tests/: test_cli.py
