[project]
name = "afj"
version = "0.1.0"
description = ""
authors = [
    {name = "Adam Labadorf",email = "labadorf@bu.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "llm",
    "gitpython"
]

[tool.poetry.group.dev.dependencies]
pytest = "*"


[tool.poetry]
packages = [{include = "afj", from = "src"}]

[tool.poetry.scripts]
afj = "afj.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
